Revert "文本编辑器：修改前端，添加编辑文本和保存文本方法。"
This reverts commit b7a8d74192e77be6e9c10e0d8664c165b99291fd.